update api description
- add language, settings routes
- fix get methods type
